<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/act_calc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/calculated_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:text="@string/_0"
        android:gravity="end"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"/>

    <TableRow
            android:gravity="center">
        <Button
                android:id="@+id/btn_borrar"
                android:layout_span="2"
                android:layout_column="0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/borrar"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/btn_inv"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/inv"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/division"
                android:layout_column="2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/divide"
                android:textSize="20sp"/>
    </TableRow>

    <TableRow
            android:gravity="center">
        <Button
                android:id="@+id/seven"
                android:layout_column="0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_7"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/eight"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_8"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/nine"
                android:layout_column="2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_9"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/multiplication"
                android:layout_column="3"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/x"
                android:textSize="20sp"/>
    </TableRow>
    <TableRow
            android:gravity="center">
        <Button
                android:id="@+id/four"
                android:layout_column="0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_4"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/five"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_5"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/six"
                android:layout_column="2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_6"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/minus"
                android:layout_column="3"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/rest"
                android:textSize="20sp"/>
    </TableRow>
    <TableRow
            android:gravity="center">
        <Button
                android:id="@+id/one"
                android:layout_column="0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_1"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/two"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_2"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/three"
                android:layout_column="2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_3"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/plus"
                android:layout_column="3"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_plus"
                android:textSize="20sp"/>
    </TableRow>

    <TableRow
            android:gravity="center">
        <Button
                android:id="@+id/zero"
                android:layout_span="3"
                android:layout_column="0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/_0"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/equals"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cornerRadius="0dp"
                android:text="@string/equals"
                android:textSize="20sp"/>
    </TableRow>

</TableLayout>