<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:orientation="vertical">

    <TextView
            android:layout_weight="2"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="50dp"
            android:text="@string/my_exam_app"
            android:layout_gravity="center"
            android:textStyle="bold"/>

    <ImageButton
            android:id="@+id/btn_calculator"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/calculadora"
            android:layout_gravity="center"
            android:contentDescription="@string/calculadora_imagen"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginBottom="20dp"/>

    <Button
            android:id="@+id/btn_montanas"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:text="@string/mis_montanas"
            app:cornerRadius="5dp"
            android:textSize="20sp"/>
</LinearLayout>