<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.Mountain">

    <TextView
            android:text="@string/mis_montanas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="174dp"
            android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="71dp" />

    <TextView
            android:text="@string/n_de_cimas_conquistadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/n_cimas_conquistadas"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="174dp"
            android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="120dp" />

    <Button
            android:id="@+id/add_mountain"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/light_grey"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="174dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp"
            android:text="@string/anadir_montana"
            android:visibility="invisible"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    <ListView
            android:id="@+id/mountain_listview"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>